Remove sensitive files from tracking
- Remove .env.local and .env.docker from git tracking
- Remove logs directory and server.log
- Remove .cursor IDE directory
- Remove .next build directory
- Update .gitignore to prevent future tracking

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ yarn-error.log*
 next-env.d.ts
 .env.local
 .env
+
+# Cursor IDE
+.cursor/
+
+# Logs
+logs/
+server.log
+
+# Environment files
+.env.docker
