--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,182 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production
 /build
+/dist
 
-# misc
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Environment files - CRITICAL
+.env
+.env.*
+!.env.example
+.env.local
+.env.production
+.env.development
+.env.test
+.env.docker
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
-.env.local
-.env
 
-# Cursor IDE
+# IDE & Editors
 .cursor/
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# Logs
+# Logs - May contain sensitive data
 logs/
+*.log
 server.log
+error.log
+access.log
+combined.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Environment files
-.env.docker
+# OS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+.cache/
+tmp/
+temp/
+*.tmp
+*.temp
+.temp/
+.tmp/
+
+# Build artifacts
+dist/
+build/
+out/
+.next/
+.nuxt/
+.vuepress/dist
+.serverless/
+.fusebox/
+.dynamodb/
+
+# User data & Sessions
+sessions/
+uploads/
+user-data/
+generated-components/
+user-uploads/
+private/
+
+# Security & Credentials
+*.pem
+*.key
+*.cert
+*.crt
+*-credentials.json
+*-key.json
+.secrets/
+private/
+credentials/
+auth/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+*.sql
+local.db
+development.db
+
+# Docker
+docker-volumes/
+docker-compose.override.yml
+.dockerignore.local
+
+# Testing artifacts
+test-results/
+playwright-report/
+playwright/.cache/
+cypress/videos/
+cypress/screenshots/
+
+# Package files
+*.tgz
+
+# Backup files
+*.backup
+*.bak
+*.old
+*~
+
+# API response cache
+.api-cache/
+cache/
+
+# User uploaded images
+public/uploads/
+static/uploads/
+
+# Local configuration
+config.local.js
+config.local.json
+settings.local.json
+
+# Python (if any Python scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+
+# Ruby (if any Ruby scripts)
+*.gem
+*.rbc
+/.config
+
+# Sensitive patterns
+*secret*
+*private*
+*credential*
+*password*
+!*example*
+!*template*
