--- a/package.json
+++ b/package.json
@@ -95,6 +95,9 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/archiver": "^6.0.3",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__traverse": "^7.20.7",
     "@types/cors": "^2.8.18",
     "@types/node": "^20",
     "@types/react": "^19",
