--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "downlevelIteration": true,
+    "target": "es2015",
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./components/*"],
