--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-# OpenAI API Key
-# Get your key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# OpenAI API Key (Required)
+OPENAI_API_KEY=your_openai_api_key_here
 
-# Anthropic API Key (Optional - for future Claude integration)
-# Get your key from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=sk-ant-api03-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Anthropic API Key (Optional - for Claude integration)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
 # Node Environment
 NODE_ENV=development
