Configure VRUX for exclusive use through vrux.dev domain
- Update all domain references from vrux.app to vrux.dev
- Implement comprehensive domain restrictions for API access
- Update CORS to only allow vrux.dev in production
- Fix repository references to github.com/ehudso7/vrux
- Add domain validation middleware for all API endpoints
- Configure Next.js rewrites for production domain enforcement
- Update all documentation and support emails
- Add forbidden endpoint for blocked domain access attempts

Security: This ensures VRUX can only be accessed as a service through https://vrux.dev

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "author": {
     "name": "VRUX Team",
-    "email": "support@vrux.app"
+    "email": "support@vrux.dev"
   },
   "license": "MIT",
   "repository": {
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/ehudso7/vrux/issues"
   },
-  "homepage": "https://vrux.app",
+  "homepage": "https://vrux.dev",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
