Add comprehensive industry-standard security features
- API Key Management with scoped permissions (like GitHub/Stripe)
- Tiered Rate Limiting by user plan (FREE, STARTER, PRO, TEAM, ENTERPRISE)
- Geographic Restrictions with country/region blocking
- IP Allowlisting with CIDR support and Cloudflare/Vercel integration
- Unified Security Middleware with pre-configured security levels
- Updated .env.example with all security configuration options

All security features follow industry best practices:
- Defense in depth with multiple security layers
- Graceful degradation for development environments
- Comprehensive logging and monitoring
- Flexible configuration for different deployment scenarios

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,87 @@ MAX_TOKENS=2000
 # Logging
 LOG_LEVEL=info
 LOG_FILE_PATH=logs/app.log
+
+# Security - Domain Restrictions
+ALLOWED_DOMAIN=https://vrux.dev
+
+# Security - API Keys
+API_KEY_ENABLED=true
+API_KEY_PREFIX=vrux
+API_KEY_RATE_LIMIT_OVERRIDE=false
+API_KEY_IP_ALLOWLIST=true
+API_KEY_DOMAIN_ALLOWLIST=true
+
+# Security - Rate Limiting Tiers
+RATE_LIMIT_FREE_REQUESTS=10
+RATE_LIMIT_FREE_WINDOW=3600000
+RATE_LIMIT_STARTER_REQUESTS=100
+RATE_LIMIT_STARTER_WINDOW=3600000
+RATE_LIMIT_PRO_REQUESTS=1000
+RATE_LIMIT_PRO_WINDOW=3600000
+RATE_LIMIT_TEAM_REQUESTS=5000
+RATE_LIMIT_TEAM_WINDOW=3600000
+RATE_LIMIT_ENTERPRISE_REQUESTS=-1
+RATE_LIMIT_ENTERPRISE_WINDOW=3600000
+
+# Security - Geographic Restrictions
+GEO_RESTRICTIONS_ENABLED=true
+GEO_DEFAULT_ALLOW=false
+GEO_ALLOWED_REGIONS=US,EU,UK,CA,AU,JP,SG
+GEO_BLOCKED_COUNTRIES=KP,IR,SY,CU
+
+# Security - IP Allowlisting
+IP_ALLOWLIST_ENABLED=true
+IP_ALLOWLIST_PRIVATE_IPS=false
+IP_ALLOWLIST_CLOUDFLARE=true
+IP_ALLOWLIST_VERCEL=true
+IP_ALLOWLIST_BYPASS_AUTH=true
+# Add custom IPs (comma-separated)
+IP_ALLOWLIST_CUSTOM_IPS=
+# Add custom CIDR ranges (comma-separated)
+IP_ALLOWLIST_CUSTOM_RANGES=
+
+# Security - Headers
+SECURITY_HEADERS_ENABLED=true
+SECURITY_CSP_ENABLED=true
+SECURITY_HSTS_ENABLED=true
+SECURITY_FRAME_DENY=DENY
+SECURITY_CONTENT_TYPE_NOSNIFF=true
+SECURITY_XSS_PROTECTION=true
+
+# Security - Request Validation
+MAX_REQUEST_SIZE=10mb
+MAX_URL_LENGTH=2048
+REQUEST_TIMEOUT=30000
+
+# Security - Session Management
+SESSION_SECRET=your_session_secret_here
+SESSION_TIMEOUT=86400000
+SESSION_REFRESH_THRESHOLD=3600000
+
+# Security - CORS
+CORS_ENABLED=true
+CORS_ORIGINS=https://vrux.dev,https://www.vrux.dev
+CORS_CREDENTIALS=true
+
+# Security - Authentication
+AUTH_JWT_SECRET=your_jwt_secret_here
+AUTH_JWT_EXPIRES_IN=7d
+AUTH_REFRESH_TOKEN_EXPIRES_IN=30d
+AUTH_REQUIRE_EMAIL_VERIFICATION=true
+AUTH_MAX_LOGIN_ATTEMPTS=5
+AUTH_LOCKOUT_DURATION=900000
+
+# Security - Monitoring
+SECURITY_LOG_ENABLED=true
+SECURITY_LOG_LEVEL=warn
+SECURITY_ALERT_EMAIL=security@vrux.dev
+SECURITY_ALERT_WEBHOOK=
+
+# Security - Development Mode
+# Set to false in production
+DEV_BYPASS_DOMAIN_CHECK=false
+DEV_BYPASS_API_KEY=false
+DEV_BYPASS_RATE_LIMIT=false
+DEV_BYPASS_GEO_CHECK=false
+DEV_BYPASS_IP_CHECK=false
