Fix authentication: API routes now return JSON, skip domain restriction in dev
- Fixed signup/signin endpoints to always return JSON responses
- Added error handling wrapper to prevent HTML error pages
- Skip domain restriction in development mode
- Created test endpoint at /api/auth/test
- Fixed 'Unexpected token <' error in auth forms

Resolves auth issues preventing signup/signin functionality

--- a/.env.example
+++ b/.env.example
@@ -1,115 +1,36 @@
-# OpenAI API Key (Required)
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Anthropic API Key (Optional - for Claude integration)
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-
-# Node Environment
+# Core Configuration
 NODE_ENV=development
-
-# Application URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Analytics (Optional)
-NEXT_PUBLIC_VERCEL_ANALYTICS_ID=
+# AI API Keys
+OPENAI_API_KEY=your-openai-api-key-here
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+
+# ViewComfy Integration
+VIEWCOMFY_API_URL=https://api.viewcomfy.com/infer
+VIEWCOMFY_CLIENT_ID=your-viewcomfy-client-id
+VIEWCOMFY_CLIENT_SECRET=your-viewcomfy-client-secret
+
+# Deployment Services
+VERCEL_TOKEN=your-vercel-token
+VERCEL_API_URL=https://api.vercel.com/v13/deployments
+NETLIFY_TOKEN=your-netlify-token
+NETLIFY_API_URL=https://api.netlify.com/api/v1
+GITHUB_TOKEN=your-github-token
+
+# Security
+SESSION_SECRET=your-secure-session-secret-here
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX_REQUESTS=10
+MAX_GENERATION_TIME_MS=30000
+MAX_TOKENS=2000
 
 # Feature Flags
 NEXT_PUBLIC_ENABLE_VIEWCOMFY=false
 NEXT_PUBLIC_ENABLE_CACHE=true
 NEXT_PUBLIC_ENABLE_QUALITY_CHECKS=true
 
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=10
-
-# Performance
-MAX_GENERATION_TIME_MS=30000
-MAX_TOKENS=2000
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE_PATH=logs/app.log
-
-# Security - Domain Restrictions
-ALLOWED_DOMAIN=https://vrux.dev
-
-# Security - API Keys
-API_KEY_ENABLED=true
-API_KEY_PREFIX=vrux
-API_KEY_RATE_LIMIT_OVERRIDE=false
-API_KEY_IP_ALLOWLIST=true
-API_KEY_DOMAIN_ALLOWLIST=true
-
-# Security - Rate Limiting Tiers
-RATE_LIMIT_FREE_REQUESTS=10
-RATE_LIMIT_FREE_WINDOW=3600000
-RATE_LIMIT_STARTER_REQUESTS=100
-RATE_LIMIT_STARTER_WINDOW=3600000
-RATE_LIMIT_PRO_REQUESTS=1000
-RATE_LIMIT_PRO_WINDOW=3600000
-RATE_LIMIT_TEAM_REQUESTS=5000
-RATE_LIMIT_TEAM_WINDOW=3600000
-RATE_LIMIT_ENTERPRISE_REQUESTS=-1
-RATE_LIMIT_ENTERPRISE_WINDOW=3600000
-
-# Security - Geographic Restrictions
-GEO_RESTRICTIONS_ENABLED=true
-GEO_DEFAULT_ALLOW=false
-GEO_ALLOWED_REGIONS=US,EU,UK,CA,AU,JP,SG
-GEO_BLOCKED_COUNTRIES=KP,IR,SY,CU
-
-# Security - IP Allowlisting
-IP_ALLOWLIST_ENABLED=true
-IP_ALLOWLIST_PRIVATE_IPS=false
-IP_ALLOWLIST_CLOUDFLARE=true
-IP_ALLOWLIST_VERCEL=true
-IP_ALLOWLIST_BYPASS_AUTH=true
-# Add custom IPs (comma-separated)
-IP_ALLOWLIST_CUSTOM_IPS=
-# Add custom CIDR ranges (comma-separated)
-IP_ALLOWLIST_CUSTOM_RANGES=
-
-# Security - Headers
-SECURITY_HEADERS_ENABLED=true
-SECURITY_CSP_ENABLED=true
-SECURITY_HSTS_ENABLED=true
-SECURITY_FRAME_DENY=DENY
-SECURITY_CONTENT_TYPE_NOSNIFF=true
-SECURITY_XSS_PROTECTION=true
-
-# Security - Request Validation
-MAX_REQUEST_SIZE=10mb
-MAX_URL_LENGTH=2048
-REQUEST_TIMEOUT=30000
-
-# Security - Session Management
-SESSION_SECRET=your_session_secret_here
-SESSION_TIMEOUT=86400000
-SESSION_REFRESH_THRESHOLD=3600000
-
-# Security - CORS
-CORS_ENABLED=true
-CORS_ORIGINS=https://vrux.dev,https://www.vrux.dev
-CORS_CREDENTIALS=true
-
-# Security - Authentication
-AUTH_JWT_SECRET=your_jwt_secret_here
-AUTH_JWT_EXPIRES_IN=7d
-AUTH_REFRESH_TOKEN_EXPIRES_IN=30d
-AUTH_REQUIRE_EMAIL_VERIFICATION=true
-AUTH_MAX_LOGIN_ATTEMPTS=5
-AUTH_LOCKOUT_DURATION=900000
-
-# Security - Monitoring
-SECURITY_LOG_ENABLED=true
-SECURITY_LOG_LEVEL=warn
-SECURITY_ALERT_EMAIL=security@vrux.dev
-SECURITY_ALERT_WEBHOOK=
-
-# Security - Development Mode
-# Set to false in production
-DEV_BYPASS_DOMAIN_CHECK=false
-DEV_BYPASS_API_KEY=false
-DEV_BYPASS_RATE_LIMIT=false
-DEV_BYPASS_GEO_CHECK=false
-DEV_BYPASS_IP_CHECK=false
+# Testing
+TEST_URL=http://localhost:3000
