--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/parser": "^7.26.0",
     "@babel/traverse": "^7.26.0",
     "@babel/types": "^7.26.0",
+    "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.7.0",
     "@octokit/rest": "^20.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -63,10 +64,12 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/bcryptjs": "^2.4.6",
     "@types/prismjs": "^1.26.5",
     "@vercel/analytics": "^1.5.0",
     "archiver": "^6.0.0",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -84,11 +87,12 @@
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-live": "^4.1.8",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.32",
+    "zod": "^3.25.51",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
